--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "email-validator>=2.2.0",
     "flask>=3.1.0",
     "flask-sqlalchemy>=3.1.1",
+    "openai>=1.58.1",
     "psycopg2-binary>=2.9.10",
     "sqlalchemy>=2.0.36",
 ]
